crates/python_parser/tests/snapshots/invalid_syntax@expressions__set__star_expression_precedence.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/set/star_expression_precedence.py
---
## AST

```
Module(
    ModModule {
        range: 0..198,
        body: [
            Expr(
                ExprStmt {
                    range: 83..92,
                    value: Set(
                        SetExpr {
                            range: 83..92,
                            elts: [
                                Starred(
                                    StarredExpr {
                                        range: 85..87,
                                        value: Name(
                                            NameExpr {
                                                range: 86..87,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 90..91,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 93..105,
                    value: Set(
                        SetExpr {
                            range: 93..105,
                            elts: [
                                Starred(
                                    StarredExpr {
                                        range: 94..101,
                                        value: Compare(
                                            CompareExpr {
                                                range: 95..101,
                                                left: Name(
                                                    NameExpr {
                                                        range: 95..96,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ops: [
                                                    In,
                                                ],
                                                comparators: [
                                                    Name(
                                                        NameExpr {
                                                            range: 100..101,
                                                            id: Name("y"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 103..104,
                                        id: Name("z"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 106..117,
                    value: Set(
                        SetExpr {
                            range: 106..117,
                            elts: [
                                Starred(
                                    StarredExpr {
                                        range: 107..113,
                                        value: UnaryOp(
                                            UnaryOpExpr {
                                                range: 108..113,
                                                op: Not,
                                                operand: Name(
                                                    NameExpr {
                                                        range: 112..113,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 115..116,
                                        id: Name("z"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 118..131,
                    value: Set(
                        SetExpr {
                            range: 118..131,
                            elts: [
                                Starred(
                                    StarredExpr {
                                        range: 119..127,
                                        value: BoolOp(
                                            BoolOpExpr {
                                                range: 120..127,
                                                op: And,
                                                values: [
                                                    Name(
                                                        NameExpr {
                                                            range: 120..121,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    Name(
                                                        NameExpr {
                                                            range: 126..127,
                                                            id: Name("y"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 129..130,
                                        id: Name("z"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 132..144,
                    value: Set(
                        SetExpr {
                            range: 132..144,
                            elts: [
                                Starred(
                                    StarredExpr {
                                        range: 133..140,
                                        value: BoolOp(
                                            BoolOpExpr {
                                                range: 134..140,
                                                op: Or,
                                                values: [
                                                    Name(
                                                        NameExpr {
                                                            range: 134..135,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    Name(
                                                        NameExpr {
                                                            range: 139..140,
                                                            id: Name("y"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 142..143,
                                        id: Name("z"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 145..167,
                    value: Set(
                        SetExpr {
                            range: 145..167,
                            elts: [
                                Starred(
                                    StarredExpr {
                                        range: 146..163,
                                        value: If(
                                            IfExpr {
                                                range: 147..163,
                                                test: BooleanLiteral(
                                                    BooleanLiteralExpr {
                                                        range: 152..156,
                                                        value: true,
                                                    },
                                                ),
                                                body: Name(
                                                    NameExpr {
                                                        range: 147..148,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                orelse: Name(
                                                    NameExpr {
                                                        range: 162..163,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 165..166,
                                        id: Name("z"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 168..185,
                    value: Set(
                        SetExpr {
                            range: 168..185,
                            elts: [
                                Starred(
                                    StarredExpr {
                                        range: 169..181,
                                        value: Lambda(
                                            LambdaExpr {
                                                range: 170..181,
                                                parameters: Some(
                                                    Parameters {
                                                        range: 177..178,
                                                        posonlyargs: [],
                                                        args: [
                                                            ParameterWithDefault {
                                                                range: 177..178,
                                                                parameter: Parameter {
                                                                    range: 177..178,
                                                                    name: Identifier {
                                                                        id: Name("x"),
                                                                        range: 177..178,
                                                                    },
                                                                    annotation: None,
                                                                },
                                                                default: None,
                                                            },
                                                        ],
                                                        vararg: None,
                                                        kwonlyargs: [],
                                                        kwarg: None,
                                                    },
                                                ),
                                                body: Name(
                                                    NameExpr {
                                                        range: 180..181,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 183..184,
                                        id: Name("z"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 186..198,
                    value: Set(
                        SetExpr {
                            range: 186..198,
                            elts: [
                                Named(
                                    NamedExpr {
                                        range: 187..194,
                                        target: Starred(
                                            StarredExpr {
                                                range: 187..189,
                                                value: Name(
                                                    NameExpr {
                                                        range: 188..189,
                                                        id: Name("x"),
                                                        ctx: Store,
                                                    },
                                                ),
                                                ctx: Store,
                                            },
                                        ),
                                        value: NumberLiteral(
                                            NumberLiteralExpr {
                                                range: 193..194,
                                                value: Int(
                                                    2,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 196..197,
                                        id: Name("z"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # For set expression, the minimum binding power of star expression is bitwise or.
2 | 
3 | {(*x), y}
  |   ^^ Syntax Error: Starred expression cannot be used here
4 | {*x in y, z}
5 | {*not x, z}
  |


  |
3 | {(*x), y}
4 | {*x in y, z}
  |   ^^^^^^ Syntax Error: Comparison expression cannot be used here
5 | {*not x, z}
6 | {*x and y, z}
  |


  |
3 | {(*x), y}
4 | {*x in y, z}
5 | {*not x, z}
  |   ^^^^^ Syntax Error: Boolean expression cannot be used here
6 | {*x and y, z}
7 | {*x or y, z}
  |


  |
4 | {*x in y, z}
5 | {*not x, z}
6 | {*x and y, z}
  |   ^^^^^^^ Syntax Error: Boolean expression cannot be used here
7 | {*x or y, z}
8 | {*x if True else y, z}
  |


  |
5 | {*not x, z}
6 | {*x and y, z}
7 | {*x or y, z}
  |   ^^^^^^ Syntax Error: Boolean expression cannot be used here
8 | {*x if True else y, z}
9 | {*lambda x: x, z}
  |


   |
 6 | {*x and y, z}
 7 | {*x or y, z}
 8 | {*x if True else y, z}
   |   ^^^^^^^^^^^^^^^^ Syntax Error: Conditional expression cannot be used here
 9 | {*lambda x: x, z}
10 | {*x := 2, z}
   |


   |
 7 | {*x or y, z}
 8 | {*x if True else y, z}
 9 | {*lambda x: x, z}
   |   ^^^^^^^^^^^ Syntax Error: Lambda expression cannot be used here
10 | {*x := 2, z}
   |


   |
 8 | {*x if True else y, z}
 9 | {*lambda x: x, z}
10 | {*x := 2, z}
   |  ^^ Syntax Error: Assignment expression target must be an identifier
   |
